# src/controllers/products.ts
@@ -1,23 +1,19 @@
-import { Get, Route, Tags } from "tsoa";
-
-interface ProductResponse {
-    message: string;
-}
+import { Get, Query, Route, Tags } from "tsoa";
+import { AppService } from "../services/app.service";
+import { ProductEntity } from "../schemas/product.entity";
 
 @Route("api/products")
 @Tags('product')
 export default class ProductsController {
+    appService: AppService = new AppService();
+
     @Get("/")
-    public async getProducts(): Promise<ProductResponse> {
-        return {
-            message: "Fetch a list of products",
-        };
+    public async getProducts(): Promise<ProductEntity[]> {
+        return this.appService.getProducts();
     }
 
     @Get("/{productId}")
-    public async getProductById(): Promise<ProductResponse> {
-        return {
-            message: "Fetch a list of products",
-        };
+    public async getProductById(@Query() id: string): Promise<ProductEntity> {
+        return this.appService.getProductById(id);
     }
 }
