# src/controllers/profile.ts
@@ -1,4 +1,8 @@
-import { Delete, Get, Post, Put, Route, Tags } from "tsoa";
+import { Delete, Get, Post, Put, Request, Route, Tags } from "tsoa";
+import { AppService } from "../services/app.service";
+import { CartEntity, UpdateEntity } from "../schemas/cart.entity";
+import { UserEntity } from "../schemas/user.entity";
+import { OrderEntity } from "../schemas/order.entity";
 
 interface ProfileResponse {
     message: string;
@@ -7,38 +11,30 @@ interface ProfileResponse {
 @Route("api/profile/cart")
 @Tags('cart')
 export default class ProfileController {
+    appService: AppService = new AppService();
+
     @Post("/")
-    public async createCart(): Promise<ProfileResponse> {
-        return {
-            message: "Create User Cart",
-        };
+    public async createCart(@Request() cart: CartEntity) {
+        this.appService.createItemCart(cart);
     }
 
     @Get("/")
-    public async getCart(): Promise<ProfileResponse> {
-        return {
-            message: "Fetch User Cart",
-        };
+    public async getCart(): Promise<CartEntity> {
+        return this.appService.getCart();
     }
 
     @Put("/")
-    public async updateCart(): Promise<ProfileResponse> {
-        return {
-            message: "Update User Cart",
-        };
+    public async updateCart(@Request() cart: UpdateEntity) {
+        this.appService.updateCart(cart.itemId, cart.count);
     }
 
     @Delete("/")
-    public async deleteCart(): Promise<ProfileResponse> {
-        return {
-            message: "Delete User Cart",
-        };
+    public async deleteCart(@Request() cartId: string) {
+        return this.appService.deleteCart(cartId);
     }
 
-    @Post("/checkout")
-    public async checkoutCart(): Promise<ProfileResponse> {
-        return {
-            message: "Checkout User Cart",
-        };
+    @Get("/checkout")
+    public async checkoutCart(@Request() user: UserEntity, @Request() cartItems: CartEntity): Promise<OrderEntity> {
+        return this.appService.checkout(user, cartItems);
     }
 }
