# src/schemas/product.entity.ts
@@ -1,0 +1,6 @@
+export interface ProductEntity {
+    id: string;
+    title: string;
+    description: string;
+    price: number;
+  }
